--- a/Alarm Clock/Alarm Clock-Info.plist
+++ b/Alarm Clock/Alarm Clock-Info.plist
@@ -24,6 +24,15 @@
 	<string>ollies.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb441320099231970</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
